# sparta-data11-practical-project

./: .gitignore  README.md  RULES.md  main.py  pyproject.toml  주제변경_임시작성본.md
CSY/: 작업.ipynb
integrated/: 1_데이터전처리_1차.ipynb  1_데이터전처리_2차.ipynb  1_데이터전처리_3차.ipynb  2_데이터전처리_테블로_1차.ipynb  2_데이터전처리_테블로_2차.ipynb  README.md  주제변경.md
jiryun/: README.md
member1/: README.md  preprocessing.ipynb
member2/: Leegolem_1st_EDA.ipynb  test.ipynb
member5/: README.md
notebook/CSY/: 0319_20_CSY.ipynb  0323_CSY.ipynb  0324_CSY.ipynb  0324_CSY_수정.ipynb  0325_CSY copy.ipynb  0325_CSY.ipynb  0326_CSY.ipynb
notebook/LSB/: README.md  eda_LSB.ipynb  merge_csv2.ipynb  merge_csv_LSB.ipynb  offer1.ipynb  offer2.ipynb  offer3.ipynb  통합csv.ipynb  파생컬럼_LSB.ipynb
notebook/jiryun/notebook/: 2차전처리_전환율.ipynb  preprocessing_지륜.ipynb  고객별기준_eda.ipynb  전체전환율_비교.ipynb  통합_전환율_시각화.ipynb
notebook/junick/: EDA.ipynb  preprocessing.ipynb  segment.ipynb  segment2.ipynb
notebook/juseoung/: 1_CSV통합_2차_이주성.ipynb  1_CSV통합_3차_이주성.ipynb  1_CSV통합_4차_이주성.ipynb  Leegolem_1st_EDA.ipynb  Leegolem_1st_select-topic.ipynb  Leegolem_1st_구매정보-분석.ipynb  Leegolem_1st_통합_EDA.ipynb  Leegolem_2st_EDA.ipynb  Leegolem_3st_통합_EDA.ipynb  Leegolem_4st_통합_EDA.ipynb  README.md  주제변경.md
notebook/juseoung/구버전/: 1_CSV통합_1차_이주성.ipynb  Leegolem_1st_EDA.ipynb  Leegolem_1st_구매정보-분석.ipynb  Leegolem_1st_통합_EDA.ipynb  Leegolem_2st_통합_EDA.ipynb
